# OpenJar-Studios

./: .gitignore  Lisence.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  modrinth.ts  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AdvancedEditor.tsx  ConfigEditorTopBar.tsx  ConfigFileList.tsx  InspectorPanel.tsx  InstancePickerDropdown.tsx  JsonSimpleEditor.tsx  NewFileModal.tsx  ServersDatSimpleEditor.tsx  TextSimpleEditor.tsx
src/lib/: configFormatting.ts  configIntelligence.ts  configSchema.ts  configSuggestions.ts  logAnalysis.ts
src/pages/: ModpacksConfigEditor.tsx  configEditorHelpers.ts
